--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="./css/styles.css">
 <script src="./js/validform.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>About NYSL</title>
 </head>
 <body>
