--- a/thank.html
+++ b/thank.html
@@ -6,7 +6,7 @@
 <title>Thank You</title>
 </head>
 <body>
-    <div class="wrap-content">
+    <div class="wrap-content touch">
         <div class="wrap-content-bg">
             <div class="header">
                 <div class="grid-header">
