--- a/rules.html
+++ b/rules.html
@@ -8,7 +8,7 @@
 <title>Rules and Policies</title>
 </head>
 <body>
-    <div class="wrap-content">
+    <div class="wrap-content touch">
         <div class="wrap-content-bg">
             <div class="header">
                 <div class="grid-header">
