--- a/event.html
+++ b/event.html
@@ -6,7 +6,7 @@
 <title>Events</title>
 </head>
 <body>
-    <div class="wrap-content">
+    <div class="wrap-content touch">
         <div class="wrap-content-bg">
             <div class="header">
                 <div class="grid-header">
