--- a/registration.html
+++ b/registration.html
@@ -180,7 +180,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col6 flex-form">
-                                            <span>Parent/Signature:</span><input class="flex-form-items" type="text" name="Signature" value=""> 
+                                            <span>Parent/Signature:</span><input class="flex-form-items" type="text" name="signature" value=""> 
                                         </div>
                                         <div class="col6 flex-form">
                                             <span>Date:</span>
