--- a/registration.html
+++ b/registration.html
@@ -68,7 +68,7 @@
                                     <div class="flex-form">
                                         <div class="flex-form flex-form-items">
                                             <span>Birthday:</span>
-                                            <input class="flex-form-items" type="text" id="dob" name="DOB" value="">
+                                            <input class="flex-form-items" type="text" id="dob" placeholder="DD/MM/YYYY" name="DOB" value="">
                                         </div>
                                         <div class="flex-form flex-form-items">
                                             <span>Gender:</span><input type="radio" name="gender" value="male"><span>Male</span><input type="radio" name="gender" value="Female"><span>Female</span> 
@@ -88,7 +88,7 @@
                                     <div class="flex-form">
                                         <div class="flex-form flex-form-items">
                                             <span class="phone-form">Contact Phone:</span>
-                                            <input class="flex-form-items" type="text" id="phone" name="phone" value="">      
+                                            <input class="flex-form-items" type="text" id="phone" placeholder="XXX-XXX-XXXX" name="phone" value="">      
                                         </div>
                                         <div class="flex-form flex-form-items">
                                             <span class="email-form">Contact email:</span>
