--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 <div class="container">
                     <div class="container-items first"><span class="op-bg bold-text"><a href="./event.html">Events</a></span></div>
                     <div class="container-items second"><span class="op-bg bold-text"><a href="./about.html">About NYSL</a></span></div>
-                    <div class="container-items third"><span class="op-bg bold-text"><a href="./policies.html">Rules & Policies</a></span></div>
+                    <div class="container-items third"><span class="op-bg bold-text"><a href="./rules.html">Rules & Policies</a></span></div>
                     <div class="container-items fourth"><span class="op-bg bold-text"><a href="./schedule.html">Game Schedule</a></span></div>
-                    <div class="container-items fifth"><span class="op-bg bold-text"><a href="./registration">Registration Form</a></span></div>
+                    <div class="container-items fifth"><span class="op-bg bold-text"><a href="./registration.html">Registration Form</a></span></div>
                     <div class="container-items sixth"><span class="op-bg bold-text"><a href="./contact.html">Contact</a></span></div>
                 </div>
             </div>
