--- a/event.html
+++ b/event.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="./css/styles.css">
-<title>Events</title>
+<script src="./js/validform.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Home</title>
 </head>
 <body>
     <div class="wrap-content touch">
