--- a/event.html
+++ b/event.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="./css/styles.css">
 <script src="./js/validform.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Home</title>
+<title>Event</title>
 </head>
 <body>
     <div class="wrap-content touch">
