--- a/index.html
+++ b/index.html
@@ -16,22 +16,24 @@
                     <div class="grid-header-items brand"><a href="./index.html">Northside Youth Soccer League</a></div>
                     <div class="grid-header-items dropdown-menu"><img id="menu-ico" src="./images/menu-ico.png" onclick="menuClick()" alt="menu-ico"></div>
                     <div class="grid-header-items menu">
-                        <div class="menu-items"><a id="homemenu" href="./index.html">Home</a></div>
-                        <div class="menu-items"><a id="aboutment" href="./about.html">About</a></div>
-                        <div class="menu-items"><a id="rulesmenu" href="./rules.html">Rules</a></div>
-                        <div class="menu-items"><a id="schedulemenu" href="./schedule.html">Schedule</a></div>
-                        <div class="menu-items"><a id="regismenu" href="./registration.html">Registration</a></div>
-                        <div class="menu-items"><a id="contactmenu" href="./contact.html">Contact</a></div>
+                        <div class="menu-items"><a id="homemenu" class="alink" href="./index.html">Home</a></div>
+                        <div class="menu-items"><a id="aboutment" class="alink" href="./about.html">About</a></div>
+                        <div class="menu-items"><a id="rulesmenu" class="alink" href="./rules.html">Rules</a></div>
+                        <div class="menu-items"><a class="alink" href="./event.html">Event</a></div>
+                        <div class="menu-items"><a id="schedulemenu" class="alink" href="./schedule.html">Schedule</a></div>
+                        <div class="menu-items"><a id="regismenu" class="alink" href="./registration.html">Registration</a></div>
+                        <div class="menu-items"><a id="contactmenu" class="alink" href="./contact.html">Contact</a></div>
                     </div>
                 </div>
                 <div id="menu-content">
                     <ul>
-                        <li><a id="homesub" href="./index.html">Home</a></li>
-                        <li><a id="aboutsub" href="./about.html">About NYSL</a></li>
-                        <li><a id="rulessub" href="./rules.html">Rules & Policies</a></li>
-                        <li><a id="schedulesub" href="./schedule.html">Schedule</a></li>
-                        <li><a id="regissubmenu" href="./registration.html">Registration</a></li>
-                        <li><a id="contactsub" href="./contact.html">Contact</a></li>
+                        <li><a id="homesub" class="alink" href="./index.html">Home</a></li>
+                        <li><a id="aboutsub" class="alink" href="./about.html">About</a></li>
+                        <li><a id="rulessub" class="alink" href="./rules.html">Rules</a></li>
+                        <li><a class="alink" href="./event.html">Event</a></li>
+                        <li><a id="schedulesub" class="alink" href="./schedule.html">Schedule</a></li>
+                        <li><a id="regissub" class="alink" href="./registration.html">Registration</a></li>
+                        <li><a id="contactsub" class="alink" href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <img class="header-img" src="./images/design1_image1-1.png" alt="header bg">
