--- a/registration.html
+++ b/registration.html
@@ -8,7 +8,7 @@
 <title>Registration Form</title>
 </head>
 <body>
-    <div class="wrap-content">
+    <div class="wrap-content touch">
         <div class="wrap-content-bg">
             <div class="header">
                 <div class="grid-header">
@@ -16,22 +16,24 @@
                     <div class="grid-header-items brand"><a href="./index.html">Northside Youth Soccer League</a></div>
                     <div class="grid-header-items dropdown-menu"><img id="menu-ico" src="./images/menu-ico.png" onclick="menuClick()" alt="menu-ico"></div>
                     <div class="grid-header-items menu">
-                        <div class="menu-items"><a id="homemenu" href="./index.html">Home</a></div>
-                        <div class="menu-items"><a id="aboutment" href="./about.html">About</a></div>
-                        <div class="menu-items"><a id="rulesmenu" href="./rules.html">Rules</a></div>
-                        <div class="menu-items"><a id="schedulemenu" href="./schedule.html">Schedule</a></div>
-                        <div class="menu-items"><a id="regismenu" href="./registration.html">Registration</a></div>
-                        <div class="menu-items"><a id="contactmenu" href="./contact.html">Contact</a></div>
+                        <div class="menu-items"><a id="homemenu" class="alink" href="./index.html">Home</a></div>
+                        <div class="menu-items"><a id="aboutment" class="alink" href="./about.html">About</a></div>
+                        <div class="menu-items"><a id="rulesmenu" class="alink" href="./rules.html">Rules</a></div>
+                        <div class="menu-items"><a class="alink" href="./event.html">Event</a></div>
+                        <div class="menu-items"><a id="schedulemenu" class="alink" href="./schedule.html">Schedule</a></div>
+                        <div class="menu-items"><a id="regismenu" class="alink" href="./registration.html">Registration</a></div>
+                        <div class="menu-items"><a id="contactmenu" class="alink" href="./contact.html">Contact</a></div>
                     </div>
                 </div>
                 <div id="menu-content">
                     <ul>
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="./about.html">About NYSL</a></li>
-                        <li><a href="./rules.html">Rules & Policies</a></li>
-                        <li><a href="./schedule.html">Schedule</a></li>
-                        <li><a href="./registration.html">Registration</a></li>
-                        <li><a href="./contact.html">Contact</a></li>
+                        <li><a class="alink" href="./index.html">Home</a></li>
+                        <li><a class="alink" href="./about.html">About</a></li>
+                        <li><a class="alink" href="./rules.html">Rules</a></li>
+                        <li><a class="alink" href="./event.html">Event</a></li>
+                        <li><a class="alink" href="./schedule.html">Schedule</a></li>
+                        <li><a class="alink" href="./registration.html">Registration</a></li>
+                        <li><a class="alink" href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <img class="header-img" src="./images/design1_image1-1.png" alt="header bg">
@@ -68,7 +70,7 @@
                                     <div class="flex-form">
                                         <div class="flex-form flex-form-items">
                                             <span>Birthday:</span>
-                                            <input class="flex-form-items" type="text" id="dob" name="DOB" value="">
+                                            <input class="flex-form-items" type="text" id="dob" placeholder="DD/MM/YYYY" name="DOB" value="">
                                         </div>
                                         <div class="flex-form flex-form-items">
                                             <span>Gender:</span><input type="radio" name="gender" value="male"><span>Male</span><input type="radio" name="gender" value="Female"><span>Female</span> 
@@ -88,7 +90,7 @@
                                     <div class="flex-form">
                                         <div class="flex-form flex-form-items">
                                             <span class="phone-form">Contact Phone:</span>
-                                            <input class="flex-form-items" type="text" id="phone" name="phone" value="">      
+                                            <input class="flex-form-items" type="text" id="phone" placeholder="XXX-XXX-XXXX" name="phone" value="">      
                                         </div>
                                         <div class="flex-form flex-form-items">
                                             <span class="email-form">Contact email:</span>
@@ -180,7 +182,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col6 flex-form">
-                                            <span>Parent/Signature:</span><input class="flex-form-items" type="text" name="Signature" value=""> 
+                                            <span>Parent/Signature:</span><input class="flex-form-items" type="text" name="signature" value=""> 
                                         </div>
                                         <div class="col6 flex-form">
                                             <span>Date:</span>
