--- a/thank.html
+++ b/thank.html
@@ -3,10 +3,12 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="./css/styles.css">
-<title>Thank You</title>
+<script src="./js/validform.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Home</title>
 </head>
 <body>
-    <div class="wrap-content">
+    <div class="wrap-content touch">
         <div class="wrap-content-bg">
             <div class="header">
                 <div class="grid-header">
@@ -14,29 +16,57 @@
                     <div class="grid-header-items brand"><a href="./index.html">Northside Youth Soccer League</a></div>
                     <div class="grid-header-items dropdown-menu"><img id="menu-ico" src="./images/menu-ico.png" onclick="menuClick()" alt="menu-ico"></div>
                     <div class="grid-header-items menu">
-                        <div class="menu-items"><a href="./index.html">Home</a></div>
-                        <div class="menu-items"><a href="./about.html">About NYSL</a></div>
-                        <div class="menu-items"><a href="./policies.html">Rules & Policies</a></div>
-                        <div class="menu-items"><a href="./schedule.html">Schedule</a></div>
-                        <div class="menu-items"><a href="./registration.html">Registration</a></div>
-                        <div class="menu-items"><a href="./contact.html">Contact</a></div>
+                        <div class="menu-items"><a class="alink" href="./index.html">Home</a></div>
+                        <div class="menu-items"><a class="alink" href="./about.html">About</a></div>
+                        <div class="menu-items"><a class="alink" href="./policies.html">Rules</a></div>
+                        <div class="menu-items"><a class="alink" href="./event.html">Event</a></div>
+                        <div class="menu-items"><a class="alink" href="./schedule.html">Schedule</a></div>
+                        <div class="menu-items"><a class="alink" href="./registration.html">Registration</a></div>
+                        <div class="menu-items"><a class="alink" href="./contact.html">Contact</a></div>
                     </div>
                 </div>
                 <div id="menu-content">
                     <ul>
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="./about.html">About NYSL</a></li>
-                        <li><a href="./policies.html">Rules & Policies</a></li>
-                        <li><a href="./schedule.html">Schedule</a></li>
-                        <li><a href="./registration.html">Registration</a></li>
-                        <li><a href="./contact.html">Contact</a></li>
+                        <li><a class="alink" href="./index.html">Home</a></li>
+                        <li><a class="alink" href="./about.html">About</a></li>
+                        <li><a class="alink" href="./policies.html">Rules</a></li>
+                        <li><a class="alink" href="./event.html">Event</a></li>
+                        <li><a class="alink" href="./schedule.html">Schedule</a></li>
+                        <li><a class="alink" href="./registration.html">Registration</a></li>
+                        <li><a class="alink" href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <img class="header-img" src="./images/design1_image1-1.png" alt="header bg">
             </div> 
             <div class="content">
                 <div class="content-inner">
-                    <p>Thank you for your registration.</p>
+                    <p>Thank you for your registration. Here is your data</p>
+                    <div class="data-submit">
+                        <table class="style-table">
+                            <tr>
+                              <th>Form Field</th>
+                              <th>Your data</th>
+                            </tr>
+                          <script language="javascript">
+                          var args = location.search.substr(1).split('&');
+                          for (var i = 0; i < args.length; ++i) {
+                            var parts = args[i].split('=');
+                            if (parts != null) {
+                              var field = parts[0];
+                              var value = parts[1];
+                              if (value == null) {
+                                value = "null"
+                              }
+                              else {
+                                value = '"' + unescape(value.replace(/\+/g, ' ')) + '"';
+                              }
+                              document.writeln('<tr><td>' + field + '</td>');
+                              document.writeln('<td>' + value + '</td></tr>');
+                            }
+                          }
+                          </script>
+                        </table>
+                    </div>
                 </div>
             </div>
             <div class="footer">
