--- a/about.html
+++ b/about.html
@@ -1,76 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<link rel="stylesheet" href="./css/styles.css">
-<script src="./js/validform.js"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>About NYSL</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>About NYSL</title>
 </head>
+
 <body>
     <div class="wrap-content touch">
         <div class="wrap-content-bg">
             <div class="header">
                 <div class="grid-header">
-                    <div class="grid-header-items logo"><a target="_blank" href="./index.html"><img src="./images/nysl_logo.png" alt="logo"></a></div>
-                    <div class="grid-header-items brand"><a href="./index.html">Northside Youth Soccer League</a></div>
-                    <div class="grid-header-items dropdown-menu"><img id="menu-ico" src="./images/menu-ico.png" onclick="menuClick()" alt="menu-ico"></div>
+                    <div class="grid-header-items logo">
+                        <a target="_blank" href="./index.html">
+                            <img src="./images/nysl_logo.png" alt="logo">
+                        </a>
+                    </div>
+                    <div class="grid-header-items brand">
+                        <a href="./index.html">Northside Youth Soccer League</a>
+                    </div>
+                    <div class="grid-header-items dropdown-menu">
+                        <img id="menu-ico" src="./images/menu-ico.png" onclick="menuClick()" alt="menu-ico">
+                    </div>
                     <div class="grid-header-items menu">
-                        <div class="menu-items"><a id="homemenu" class="alink" href="./index.html">Home</a></div>
-                        <div class="menu-items"><a id="aboutment" class="alink" href="./about.html">About</a></div>
-                        <div class="menu-items"><a id="rulesmenu" class="alink" href="./rules.html">Rules</a></div>
-                        <div class="menu-items"><a class="alink" href="./event.html">Event</a></div>
-                        <div class="menu-items"><a id="schedulemenu" class="alink" href="./schedule.html">Schedule</a></div>
-                        <div class="menu-items"><a id="regismenu" class="alink" href="./registration.html">Registration</a></div>
-                        <div class="menu-items"><a id="contactmenu" class="alink" href="./contact.html">Contact</a></div>
+                        <div class="menu-items">
+                            <a id="homemenu" class="alink" href="./index.html">Home</a>
+                        </div>
+                        <div class="menu-items">
+                            <a id="aboutment" class="alink" href="./about.html">About</a>
+                        </div>
+                        <div class="menu-items">
+                            <a id="rulesmenu" class="alink" href="./rules.html">Rules</a>
+                        </div>
+                        <div class="menu-items">
+                            <a class="alink" href="./event.html">Event</a>
+                        </div>
+                        <div class="menu-items">
+                            <a id="schedulemenu" class="alink" href="./schedule.html">Schedule</a>
+                        </div>
+                        <div class="menu-items">
+                            <a id="regismenu" class="alink" href="./registration.html">Registration</a>
+                        </div>
+                        <div class="menu-items">
+                            <a id="contactmenu" class="alink" href="./contact.html">Contact</a>
+                        </div>
                     </div>
                 </div>
                 <div id="menu-content">
                     <ul>
-                        <li><a id="homesub" class="alink" href="./index.html">Home</a></li>
-                        <li><a id="aboutsub" class="alink" href="./about.html">About</a></li>
-                        <li><a id="rulessub" class="alink" href="./rules.html">Rules</a></li>
-                        <li><a class="alink" href="./event.html">Event</a></li>
-                        <li><a id="schedulesub" class="alink" href="./schedule.html">Schedule</a></li>
-                        <li><a id="regissub" class="alink" href="./registration.html">Registration</a></li>
-                        <li><a id="contactsub" class="alink" href="./contact.html">Contact</a></li>
+                        <li>
+                            <a id="homesub" class="alink" href="./index.html">Home</a>
+                        </li>
+                        <li>
+                            <a id="aboutsub" class="alink" href="./about.html">About</a>
+                        </li>
+                        <li>
+                            <a id="rulessub" class="alink" href="./rules.html">Rules</a>
+                        </li>
+                        <li>
+                            <a class="alink" href="./event.html">Event</a>
+                        </li>
+                        <li>
+                            <a id="schedulesub" class="alink" href="./schedule.html">Schedule</a>
+                        </li>
+                        <li>
+                            <a id="regissub" class="alink" href="./registration.html">Registration</a>
+                        </li>
+                        <li>
+                            <a id="contactsub" class="alink" href="./contact.html">Contact</a>
+                        </li>
                     </ul>
                 </div>
                 <img class="header-img" src="./images/design1_image1-1.png" alt="header bg">
-            </div> 
+            </div>
             <div class="content">
                 <div class="content-inner">
                     <div class="section">
                         <h3>Mission</h3>
-                        <div class="section-content">   
-                            <p>To support young athletes living in Chicago's northside neighborhoods, who have an interest in learning and playing soccer, with opportunities to learn and practice skills related to the game of soccer, specifically those skills around team cooperation and good sportsmanship.</p>
-                        </div> 
+                        <div class="section-content">
+                            <p>To support young athletes living in Chicago's northside neighborhoods, who have an interest in
+                                learning and playing soccer, with opportunities to learn and practice skills related to the
+                                game of soccer, specifically those skills around team cooperation and good sportsmanship.</p>
+                        </div>
                     </div>
                     <div class="section">
                         <h3>Vision</h3>
-                        <div class="section-content"> 
-                            <p>The Northside Youth Soccer League aspires to develop strong, well-round, and mindful athletes through the building of character, self-discipline, and leadership.</p>
+                        <div class="section-content">
+                            <p>The Northside Youth Soccer League aspires to develop strong, well-round, and mindful athletes
+                                through the building of character, self-discipline, and leadership.</p>
                         </div>
                     </div>
                     <div class="section">
                         <h3>General Information</h3>
-                        <div class="section-content"> 
-                            <p>The Northside Youth Soccer League was established in 1996 to provide athletes residing in Chicago's northside neighborhoods an environment in which to learn and play soccer. To be a member of NYSL, you must be between the ages of 4 - 12 and reside in a Chicago northside neighborhood. NYSL is ran by a small full-time staff, and relies on the generous volunteer time of parents and previous league members.</p>
+                        <div class="section-content">
+                            <p>The Northside Youth Soccer League was established in 1996 to provide athletes residing in Chicago's
+                                northside neighborhoods an environment in which to learn and play soccer. To be a member
+                                of NYSL, you must be between the ages of 4 - 12 and reside in a Chicago northside neighborhood.
+                                NYSL is ran by a small full-time staff, and relies on the generous volunteer time of parents
+                                and previous league members.</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="footer">
-                    <p>Copyright &#169; by Phi Phan</p>
+                <p>Copyright &#169; by Phi Phan</p>
             </div>
         </div>
     </div>
-    <script>
-            function menuClick(){
-                let x = document.getElementById("menu-ico");
-                let y = document.getElementById("menu-content");
-                y.style.display == "none" ? y.style.display = "block" : y.style.display = "none";
-            }
-    </script>
+    <script src="./js/validform.js"></script>
 </body>
+
 </html>
