--- a/contact.html
+++ b/contact.html
@@ -1,53 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<link rel="stylesheet" href="./css/styles.css">
-<script src="./js/validform.js"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Contact</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Contact</title>
 </head>
+
 <body>
     <div class="wrap-content touch">
         <div class="wrap-content-bg">
             <div class="header">
                 <div class="grid-header">
-                    <div class="grid-header-items logo"><a target="_blank" href="./index.html"><img src="./images/nysl_logo.png" alt="logo"></a></div>
-                    <div class="grid-header-items brand"><a href="./index.html">Northside Youth Soccer League</a></div>
-                    <div class="grid-header-items dropdown-menu"><img id="menu-ico" src="./images/menu-ico.png" onclick="menuClick()" alt="menu-ico"></div>
+                    <div class="grid-header-items logo">
+                        <a target="_blank" href="./index.html">
+                            <img src="./images/nysl_logo.png" alt="logo">
+                        </a>
+                    </div>
+                    <div class="grid-header-items brand">
+                        <a href="./index.html">Northside Youth Soccer League</a>
+                    </div>
+                    <div class="grid-header-items dropdown-menu">
+                        <img id="menu-ico" src="./images/menu-ico.png" onclick="menuClick()" alt="menu-ico">
+                    </div>
                     <div class="grid-header-items menu">
-                        <div class="menu-items"><a id="homemenu" class="alink" href="./index.html">Home</a></div>
-                        <div class="menu-items"><a id="aboutment" class="alink" href="./about.html">About</a></div>
-                        <div class="menu-items"><a id="rulesmenu" class="alink" href="./rules.html">Rules</a></div>
-                        <div class="menu-items"><a class="alink" href="./event.html">Event</a></div>
-                        <div class="menu-items"><a id="schedulemenu" class="alink" href="./schedule.html">Schedule</a></div>
-                        <div class="menu-items"><a id="regismenu" class="alink" href="./registration.html">Registration</a></div>
-                        <div class="menu-items"><a id="contactmenu" class="alink" href="./contact.html">Contact</a></div>
+                        <div class="menu-items">
+                            <a id="homemenu" class="alink" href="./index.html">Home</a>
+                        </div>
+                        <div class="menu-items">
+                            <a id="aboutment" class="alink" href="./about.html">About</a>
+                        </div>
+                        <div class="menu-items">
+                            <a id="rulesmenu" class="alink" href="./rules.html">Rules</a>
+                        </div>
+                        <div class="menu-items">
+                            <a class="alink" href="./event.html">Event</a>
+                        </div>
+                        <div class="menu-items">
+                            <a id="schedulemenu" class="alink" href="./schedule.html">Schedule</a>
+                        </div>
+                        <div class="menu-items">
+                            <a id="regismenu" class="alink" href="./registration.html">Registration</a>
+                        </div>
+                        <div class="menu-items">
+                            <a id="contactmenu" class="alink" href="./contact.html">Contact</a>
+                        </div>
                     </div>
                 </div>
                 <div id="menu-content">
                     <ul>
-                        <li><a id="homesub" class="alink" href="./index.html">Home</a></li>
-                        <li><a id="aboutsub" class="alink" href="./about.html">About</a></li>
-                        <li><a id="rulessub" class="alink" href="./rules.html">Rules</a></li>
-                        <li><a class="alink" href="./event.html">Event</a></li>
-                        <li><a id="schedulesub" class="alink" href="./schedule.html">Schedule</a></li>
-                        <li><a id="regissub" class="alink" href="./registration.html">Registration</a></li>
-                        <li><a id="contactsub" class="alink" href="./contact.html">Contact</a></li>
+                        <li>
+                            <a id="homesub" class="alink" href="./index.html">Home</a>
+                        </li>
+                        <li>
+                            <a id="aboutsub" class="alink" href="./about.html">About</a>
+                        </li>
+                        <li>
+                            <a id="rulessub" class="alink" href="./rules.html">Rules</a>
+                        </li>
+                        <li>
+                            <a class="alink" href="./event.html">Event</a>
+                        </li>
+                        <li>
+                            <a id="schedulesub" class="alink" href="./schedule.html">Schedule</a>
+                        </li>
+                        <li>
+                            <a id="regissub" class="alink" href="./registration.html">Registration</a>
+                        </li>
+                        <li>
+                            <a id="contactsub" class="alink" href="./contact.html">Contact</a>
+                        </li>
                     </ul>
                 </div>
                 <img class="header-img" src="./images/design1_image1-1.png" alt="header bg">
-            </div>    
+            </div>
             <div class="content">
                 <div class="content-inner">
-                    <p>Please email us at <a style="color: rgb(226, 226, 7);" href="mailto:nysl@chisoccer.org">nysl@chisoccer.org</a></p>
+                    <p>Please email us at
+                        <a style="color: rgb(226, 226, 7);" href="mailto:nysl@chisoccer.org">nysl@chisoccer.org</a>
+                    </p>
                     <p>We will reply as soon as possible</p>
                     <p class="bold-text" style="color: rgb(226, 226, 7);">Follow us:</p>
                     <ul class="social-media">
-                        <li><a href="#"><img src="./images/face-ico.png" alt="Facebook"></a></li>
-                        <li><a href="#"><img src="./images/insta-ico.png" alt="Instagram"></a></li>
-                        <li><a href="#"><img src="./images/twitter-ico.png" alt="Twitter"></a></li>
-                        <li><a href="#"><img src="./images/tumblr-ico.png" alt="Tumblr"></a></li>
+                        <li>
+                            <a href="#">
+                                <img src="./images/face-ico.png" alt="Facebook">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./images/insta-ico.png" alt="Instagram">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./images/twitter-ico.png" alt="Twitter">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./images/tumblr-ico.png" alt="Tumblr">
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -56,12 +111,7 @@
     <div class="footer">
         <p>Copyright &#169; by Phi Phan</p>
     </div>
-    <script>
-        function menuClick(){
-            let x = document.getElementById("menu-ico");
-            let y = document.getElementById("menu-content");
-            y.style.display == "none" ? y.style.display = "block" : y.style.display = "none";
-        }
-    </script>
+    <script src="./js/validform.js"></script>
 </body>
+
 </html>
